# sigroktopg

./: MANIFEST.in  README.md  pyproject.toml
sigroktopg/: sigroktopg.py
